--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,16 @@
-.App {
-  text-align: center;
+
+body {
+  font-family: 'Arial', sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  padding: 20px;
 }
 
 .App-logo {
@@ -7,10 +18,48 @@
   pointer-events: none;
 }
 
+.card {
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  transition: box-shadow 0.3s ease-in-out;
+}
+
+.card:hover {
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+}
+
+.card img {
+  max-width: 20%;
+  height: auto;
+}
+
+.card-body {
+  padding: 16px;
+}
+
+.card-title {
+  font-size: 1.2em;
+  margin-bottom: 8px;
+}
+
+.card-text {
+  color: #555;
+}
+
+.card-text:last-child {
+  margin-bottom: 0;
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
+}
+
+.nav-ul {
+  padding: 6px;
+  margin: 0;
+  background-color: #19a7b8;
+  height: 40px;
 }
 
 .App-header {
@@ -34,5 +83,61 @@
   }
   to {
     transform: rotate(360deg);
+  }
+}
+
+.Footer {
+  background-color: #19a7b8;
+  width: 100%;
+  text-align: center;
+  bottom: 0;
+  position: absolute;
+}
+
+.category {
+  border: 1px solid #ddd;
+  padding: 20px;
+  text-align: center;
+}
+
+@media only screen and (max-width: 600px) {
+  .App-logo {
+    height: 30vmin;
+  }
+
+  .card {
+    width: 80%;
+  }
+
+  .card img {
+    max-width: 100%;
+  }
+
+  .nav-ul {
+    height: auto;
+  }
+
+  .App-header {
+    min-height: auto;
+  }
+
+  .Footer {
+    position: relative;
+  }
+}
+
+@media only screen and (min-width: 601px) and (max-width: 1024px) {
+  .container {
+    padding: 10px;
+  }
+}
+
+@media only screen and (min-width: 1025px) {
+  .App-logo {
+    height: 40vmin;
+  }
+
+  .card {
+    width: 30%;
   }
 }
